--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -4574,7 +4574,202 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
   \end{proof}
 \end{satz}
 
+\todo{Vorlesung vom 2007-07-10}
 
+%Vorlesung vom 2007-07-11
+
+%bsp 10.5
+\begin{bsp}
+  Sei $L$ eine Lie-Algebra vom Typ $E_{6}$ mit der üblichen Cartanzerlegung
+  $L=H\oplus\bigoplus_{\alpha\in\Phi_{0}} \C e_{\alpha}$, $\abs{\Phi}=72$,
+  Basis $\Pi\subseteq\Phi$ mit
+  $\Pi=\{\alpha_{34},\dotsc,\alpha_{78},\beta_{678}\}$. Wir haben eine lineare
+  Bijektion $\phi\colon H^{*}\rightarrow H^{*}$ konstruiert (wie im Diagramm).
+  dazu haben wir weiter einen Automorphismus
+  $\psi(h_{\alpha})=h_{\phi(\alpha)}$ unf $\psi(e_{\alpha})=e_{\phi(\alpha)}$
+  von $L$ konstruiert. Es gilt $\psi^{2}=\id_{L}$. Nehmen Fixpunkte unter
+  $\psi$: $\dot{L}=\dot{H}\oplus\bigoplus_{\alpha\in\dot{\Phi}} \C e_{\alpha}
+  \oplus\bigoplus_{\alpha\in\Phi\setminus\dot{\Phi}} \C (e_{\alpha}+
+  \psi(e_{\alpha}))$ mit $\dot{L}\colon=\{x\in L\colon \psi(x)=x\},
+  \dot{H}\colon=\{x\in H\colon \psi(x)=x\}, \dot{\Phi}\colon=
+  \{cma\in\Phi\colon \phi(\alpha)=\alpha\}$. Dann ist $\dim\dot{L}=52,
+  \dim\dot{H}=4, \abs{\dot{\Phi}}=24$. Ferner: $\alpha\in\Phi\Rightarrow
+  0\neq\alpha|\dot{H}=\phi(\alpha)|\dot{H}$ und $\alpha, \beta\in\Phi$ mit
+  $\alpha|\dot{H}=\beta|\dot{H}\Rightarrow\beta\in\{\alpha, \phi(\alpha)\}$.
+  Man hat 48 verschiedene Wurzeln von $\dot{L}$ bezüglich $\dot{H}$. Diese
+  entstehen alle durch Einschränkung der Wurzeln von $L$ bezüglich $H$. Ferner
+  ist die obige Formel die Cartanzerlegung von $\dot{L}$ bezüglich $\dot{H}$.
+  Alle Wurzelräume sind eindimensional. Für $\alpha\in\Phi\setminus\dot{\Phi}$
+  ist $[e_{\alpha}+e_{\phi(\alpha)}, e_{-\alpha}+e_{-\phi(\alpha)}]=
+  \underbrace{[e_{\alpha}, e_{-\alpha}]}_{h_{\alpha}}+
+  \underbrace{[e_{\alpha}, e_{-\phi(\alpha)}]}_{L_{\alpha-\phi(\alpha)}(H)}+
+  \underbrace{[e_{\phi(\alpha)}, e_{-\alpha}]}_{\in
+  L_{\phi(\alpha)-\alpha}(H)}+ \underbrace{[e_{\phi(\alpha)},
+  e_{-\phi(\alpha)}]}_{h_{\phi(\alpha)}}$ mit
+  $h_{\alpha}+h_{\phi(\alpha)}\neq0$ wegen $\alpha+\phi(\alpha)\neq0$.
+  Folglich ist $[e_{\alpha}+e_{\phi(\alpha)},
+  e_{-\alpha}+e_{-\phi(\alpha)}]\neq0$. Es folgt leicht, dass die Algebra
+  $\dot{L}$ die Voraussetzungen von \autoref{satz:102} erfüllt. Daher ist die
+  Lie-Algebra $\dot{L}$ halbeinfach. Offensichtlich ist
+  $\dot{\Pi}=\{\alpha_{34}|\dot{H}, \alpha_{45}|\dot{H}, \alpha_{56}|\dot{H},
+  \beta_{678}|\dot{H}\}$ eine Basis von $\dot{\Phi}$. Zur Bestimmung der
+  Cartenmatrix von $\dot{L}$ rechnen wir die folgenden Ketten aus:
+  \begin{itemize}
+   \item $\alpha_{34}|\dot{H}$"~Kette durch $\alpha_{45}|\dot{H}$:
+    $\alpha_{45}|\dot{H}, \alpha_{35}|\dot{H}$
+   \item $\alpha_{45}|\dot{H}$"~Kette durch $\alpha_{56}|\dot{H}$:
+    $\alpha_{56}|\dot{H}, \alpha_{46}|\dot{H}, \alpha_{47}|\dot{H}$   \item $\alpha_{56}|\dot{H}$"~Kette durch $\beta_{678}|\dot{H}$:
+    $\beta_{678}|\dot{H}, \beta_{578}|\dot{H}$
+  \end{itemize}
+  Daher hat der Coxetergraph von $\dot{L}$ bezüglich $\dot{\Pi}$ die Form:
+  o-o=o-o, d.\,h. also $\dot{L}$ ist eine einfache Lie-Algebra vom Typ $F_{4}$.
+\end{bsp}
+
+\chapter{Konjugationssätze}
+
+%bem 11.1
+\begin{bemerk}
+  Sei $L$ eine halbeinfache Lie-Algebra mit Cartanalgebra $H$, Wurzelsystem
+  $\Phi$ und Weylgruppe $W$. Dann ist die Abbildung $\mu\colon
+  H^{*}\rightarrow H, \alpha\mapsto h_{\alpha}$ eine lineare Bijektion. Für
+  $\sigma\in W$ setzen wir
+  $\hat{\sigma}\colon=\mu^{-1}\circ\sigma\circ\mu\in\text{End}_{\C}(H^{*})$. Dann
+  ist $\hat{\sigma}\circ\hat{\tau}=\widehat{\sigma\circ\tau}$ für $\sigma,
+  \tau\in W$ und für $\alpha\in\Phi$ ist $h_{\hat{\sigma}(\alpha)}=
+  \mu(\hat{\sigma})\alpha))= \sigma(\mu(\alpha))= \sigma(h_{\alpha})$.
+  Insbesondere ist $\hat{\sigma}(\Phi)=\Phi$.
+\end{bemerk}
+
+\begin{satzON}
+  Sei $L$ eine halbeinfache Lie-Algebra mit Cartanalgebra $H$, Wurzelsystem
+  $\Phi$ und Weylgruppe $W$. Zu je zwei Basen $\Pi, \Pi'$ existiert ein
+  $\sigma\in W$ mit $\hat{\sigma}(\Pi)=\Pi'$.
+  \begin{proof}
+    Beweis mit "`versteckter"' Induktion:
+    Seien $P(\Pi), P(\Pi')$ die Mengen der positiven Wurzeln in $\Phi$
+    bezüglich $\Pi$ bzw. $\Pi'$.Im Fall $P(\Pi)=P(\Pi')$  existiert zu jedem
+    $\alpha\in\Pi$ Elemente $n_{\beta'}\in\N_{0}$ mit
+    $\alpha=\sum_{\beta'\in\Pi'} n_{\alpha\beta'}\beta'$ und umgekehrt. Daher
+    ist $\Pi=\Pi'$.
+
+    Sei $P(\Pi)\neq P(\Pi')$, d.\,h. $P(\Pi)\nsubseteq P(\Pi')$ wegen
+    $\abs{P(\Pi)}= \frac{\abs{\Phi}}{2}= \abs{P(\Pi')}$. Dann ist auch
+    $\Pi\nsubseteq P(\Pi')$. Wählen $\alpha\in\Pi\setminus P(\Pi')$. Sei
+    $\beta\in P(\Pi)$ beliebig. Schreiben $\beta=\sum_{\gamma\in\Pi}
+    n_{\gamma} \gamma$ für $n_{\gamma}\in\N_{0}, \gamma\in\Pi$. Dann ist
+    $\Phi\ni\hat{\sigma}_{\alpha}(\beta)=\beta-\frac{2\kappa_{L}(h_{\alpha},
+    h_{\beta})}{\kappa_{L}(h_{\alpha}, h_{\alpha})}\alpha$. Daher ist
+    $\hat{\sigma}_{\alpha}(\beta)\in P(\Pi)$ außer im Fall $\beta=\alpha$.
+    Folglich ist $\hat{\sigma}_{\alpha}(P(\Pi)\cap P(\Pi'))\subseteq P(\Pi)$.
+    Offenbar ist auch $\hat{\sigma}_{\alpha}(P(\Pi'))$ eine Basis von $\Phi$.
+    Damit ist $\hat{\sigma}_{\alpha}(P(\Pi)\cap
+    P(\Pi'))\subseteq\hat{\sigma}_{\alpha}(P(\Pi'))=
+    P(\hat{\sigma}_{\alpha}(\Pi'))$, d.\,h. also
+    $\hat{\sigma}_{\alpha}(P(\Pi)\cap P(\Pi'))\subseteq P(\Pi)\cap
+    P(\hat{\sigma}_{\alpha}(\Pi'))$. Wegen $\hat{\sigma}_{\alpha}(\alpha)=
+    -\alpha\in P(\Pi')$ ist
+    $\alpha=\hat{\sigma}_{\alpha}(-\alpha)\in\hat{\sigma}_{\alpha}(P(\Pi'))=
+    P(\hat{\sigma}_{\alpha}(\Pi'))$. Daher ist $\abs{P(\Pi)\cap P(\Pi')}<
+    \abs{P(\Pi)\cap P(\hat{\sigma}_{\alpha}(\Pi'))}$.
+
+    So erhält man Elemente $\alpha_{1},\dotsc,\alpha_{n}\in\Phi$ mit
+    $\abs{P(\Pi)\cap P(\Pi')}<\abs{P(\Pi)\cap
+    P(\hat{\sigma}_{\alpha_{1}}(\Pi'))}< \abs{P(\Pi)\cap
+    P(\hat{\sigma}_{\alpha_{2}}(\hat{\sigma}_{\alpha_{1}}(\Pi')))}<\dotsb$. Am
+    Schluss hat man ein $\sigma\in W$ mit $P(\Pi)=P(\hat{\sigma}(\Pi'))$,
+    d.\,h. $\Pi=\hat{\sigma}(\Pi')$.
+  \end{proof}
+\end{satzON}
+
+%bem 11.2
+\begin{bemerk}
+  Mit den obigen Bezeichnungen gilt für $\alpha, \beta\in\Pi$:
+  \begin{gather*}
+    \frac{2\kappa_{L}(h_{\hat{\sigma}(\alpha)},
+       h_{\hat{\sigma}(\beta)})}{\kappa_{L}(h_{\hat{\sigma}(\alpha)},
+       h_{\hat{\sigma}(\alpha)})}= \frac{2\kappa_{L}(\sigma(h_{\alpha}),
+       \sigma(h_{\beta}))}{\kappa_{L}(\sigma(h_{\alpha}),
+       \sigma(h_{\alpha}))}= \frac{2\kappa_{L}(h_{\alpha},
+       h_{\beta})}{\kappa_{L}(h_{\alpha}, h_{\alpha})}
+  \end{gather*}
+  Dies zeigt, dass die Cartaninvarianten bezüglich $\Pi$ und $\Pi'$
+  übereinstimmen.
+\end{bemerk}
+
+\begin{satzON}
+  Seien $L$ eine Lie-Algebra, $x,y\in L, \delta\in\Der(L)$ und $n\in \N_{0}$.
+  Dann gilt:
+  \begin{gather*}
+    \delta^{n}([x,y])= \sum_{i=0}^{n} \binom{n}{i} [\delta^{i}(x),
+       \delta^{n-1}(y)]
+  \end{gather*}
+  \begin{proof}
+    Indunktion nach $n$:
+    Für $n=0$ steht auf beiden Seien $[x,y]$. Sei also $n>0$ und
+    $\delta^{n-1}([x,y])= \sum_{i=0}^{n-1} \binom{n-1}{i} [\delta^{i}(x),
+    \delta^{n-1-i}(y)]$. Dann ist:
+    \begin{align*}
+      \delta^{n}([x,y]) &= \delta(\delta^{n-1}([x,y]))= \sum_{i=0}^{n-1}
+	 \binom{n-1}{i} \delta([\delta^{i}(x), \delta^{n-1-i}(y)])\\
+      &= \sum_{i=0}^{n-1} \binom{n-1}{i} [\delta^{i+1}(x), \delta^{n-1-i}(y)]+
+	 \sum_{i=0}^{n-1} \binom{n-1}{i} [\delta^{i}(x), \delta^{n-i}(y)]\\
+      &= \sum_{j=1}^{n} \binom{n-1}{j-1} [\delta^{j}(x), \delta^{n-j}(y)] +
+	 \sum_{j=0}^{n-1} \binom{n-1}{j} [\delta^{j}(x), \delta^{n-j}(y)]\\
+      &= \sum_{j=0}^{n-1} \binom{n}{j} [\delta^{j}(x), \delta^{n-j}(y)]
+    \end{align*}
+  \end{proof}
+\end{satzON}
+
+%bem 11.3
+\begin{bemerk}
+  Sei $V$ ein endlich"=dimensionaler Vektorraum und $\phi\in\text{End}_{\C}(V)$
+  nilpotent, d.\,h. $\phi^{n}=0$ für ein $n\in\N$. Wir setzen
+  \begin{gather*}
+    \exp(cmf)\colon= \sum_{k=0}^{\infty} \frac{\phi^{k}}{\phi!}= \id_{V} +
+       \underbrace{\phi+ \frac{\phi^{2}}{2}+
+	 \frac{\phi^{n}}{n!}}_{\text{nilpotent}}\in\text{End}_{\C}(V)
+  \end{gather*}
+  Damit ist $\exp(\phi)$ bijektiv. Für nilpotente Elemente $\phi,
+  \psi\in\text{End}_{\C}(V)$ mit $\phi\circ\psi=\psi\circ\phi$ ist wie üblich
+  $\phi+\psi$ nilpotent und $\exp(\phi+\psi)=\exp(\phi)\exp(\psi)$.
+\end{bemerk}
+
+\begin{satzON}
+  Sei $L$ eine Lie-Algebra, $x,y\in L$ und $\delta\in\Der(L)$ nilpotent. Dann
+  gilt:
+  \begin{gather*}
+    [(\exp\delta)(x), (\exp\delta)(y)]= (\exp\delta)[x,y]
+  \end{gather*}
+  Also ist $\exp$ ein Homomorphismus von Lie-Algebren.
+  \begin{proof}
+    Sei $n\in\N$ mit $\delta^{n}=0$. Dann gilt
+    \begin{align*}
+      [(\exp\delta)(x), (\exp\delta)(y)] &= [\sum_{i=0}^{n}
+	 \frac{\delta^{i}(x)}{i!}, \sum_{j=0}^{n} \frac{\delta^{j}(y)}{j!}]\\
+      &= \sum_{k=0}^{2n} \sum_{l=0}^{k} [\frac{\delta^{l}(x)}{l!},
+	 \frac{\delta^{k-l}(y)}{(k-l)!}]\\
+      &= \sum_{k=0}^{2n} \frac{\delta^{k}([x,y])}{k!}= (\exp\delta)([x,y])
+    \end{align*}
+  \end{proof}
+\end{satzON}
+
+%bem 11.4
+\begin{bemerk}
+  Nach dem obigen Satz gehört $\exp(\delta)$ für jede nilpotente Derivation
+  $\delta$ einer Lie-Algebra $L$ zur Automorphismengruppe $\text{Aut}(L)$. Ein
+  Element $a\in L$ heißt \highl{ad"~nilpotent}, falls die Abbildung
+  $\ad_{a}\colon L\rightarrow L$ nilpotent ist. Für jedes ad-nilpotente
+  Element $a\in L$ ist also $\exp(\ad_{a})\in\text{Aut}(L)$. Solche
+  Automorphismen nennt man \highl[Automorphismus!innerer]{innere
+  Automorphismen} von $L$. Die von den inneren Automorphismen erzeugte
+  Untergruppe von $\text{Aut}(L)$ bezeichnet man mit $\text{Int}(L)$. Für
+  $a,b\in L$ und $\phi\in\text{Aut}(L)$ ist
+  $\phi\circ\ad_{a}\circ\phi^{-1}(b)=\phi([a, \phi^{-1}(b)])= [\phi(a), b]=
+  \ad_{\phi(a)}(b)$, also $\phi\circ\ad_{a}\circ\phi^{-1}=\ad_{\phi(a)}$ und
+  daher $\phi\circ\exp(\ad_{a})\circ\phi^{-1}=\exp(\ad_{\phi(a)})$, falls $a$
+  ad-nilpotent. Dies zeigt, dass $\text{Int}(L)$ ein Normalteiler von
+  $\text{Aut}(L)$ ist: $\text{Int}(L)\trianglelefteq\text{Aut}(L)$
+\end{bemerk}
 
 \clearpage
 \appendix
