--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -121,6 +121,8 @@
 \newcommand*{\FM}{\mathfrak{M}}
 \newcommand*{\FF}{\mathfrak{F}}
 \newcommand*{\FU}{\mathfrak{U}}
+\newcommand*{\FE}{\mathfrak{E}}
+\newcommand*{\FN}{\mathfrak{N}}
 \newcommand*{\Fn}{\mathfrak{n}}
 \newcommand*{\Fb}{\mathfrak{b}}
 \newcommand*{\Fh}{\mathfrak{h}}
@@ -140,6 +142,7 @@
 \DeclareMathOperator{\sgn}{sgn}
 \DeclareMathOperator{\Sym}{Sym}
 \DeclareMathOperator{\diag}{diag}
+\DeclareMathOperator{\Int}{Int}
 
 % Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
@@ -4793,7 +4796,7 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
        \delta^{n-1}(y)]
   \end{gather*}
   \begin{proof}
-    Indunktion nach $n$:
+    Induktion nach $n$:
     Für $n=0$ steht auf beiden Seien $[x,y]$. Sei also $n>0$ und
     $\delta^{n-1}([x,y])= \sum_{i=0}^{n-1} \binom{n-1}{i} [\delta^{i}(x),
     \delta^{n-1-i}(y)]$. Dann ist:
@@ -4814,7 +4817,7 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
   Sei $V$ ein endlich"=dimensionaler Vektorraum und $\phi\in\text{End}_{\C}(V)$
   nilpotent, d.\,h. $\phi^{n}=0$ für ein $n\in\N$. Wir setzen
   \begin{gather*}
-    \exp(cmf)\colon= \sum_{k=0}^{\infty} \frac{\phi^{k}}{\phi!}= \id_{V} +
+    \exp(\phi)\colon= \sum_{k=0}^{\infty} \frac{\phi^{k}}{\phi!}= \id_{V} +
        \underbrace{\phi+ \frac{\phi^{2}}{2}+
 	 \frac{\phi^{n}}{n!}}_{\text{nilpotent}}\in\text{End}_{\C}(V)
   \end{gather*}
@@ -4833,10 +4836,10 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
   \begin{proof}
     Sei $n\in\N$ mit $\delta^{n}=0$. Dann gilt
     \begin{align*}
-      [(\exp\delta)(x), (\exp\delta)(y)] &= [\sum_{i=0}^{n}
-	 \frac{\delta^{i}(x)}{i!}, \sum_{j=0}^{n} \frac{\delta^{j}(y)}{j!}]\\
-      &= \sum_{k=0}^{2n} \sum_{l=0}^{k} [\frac{\delta^{l}(x)}{l!},
-	 \frac{\delta^{k-l}(y)}{(k-l)!}]\\
+      [(\exp\delta)(x), (\exp\delta)(y)] &= \left[\sum_{i=0}^{n}
+	 \frac{\delta^{i}(x)}{i!}, \sum_{j=0}^{n} \frac{\delta^{j}(y)}{j!}\right]\\
+      &= \sum_{k=0}^{2n} \sum_{l=0}^{k} \left[\frac{\delta^{l}(x)}{l!},
+	 \frac{\delta^{k-l}(y)}{(k-l)!}\right]\\
       &= \sum_{k=0}^{2n} \frac{\delta^{k}([x,y])}{k!}= (\exp\delta)([x,y])
     \end{align*}
   \end{proof}
@@ -4851,14 +4854,163 @@ Insbesondere ist $o_{2n+1}$ für $n\in\N$ eine einfache Lie-Algebra.
   Element $a\in L$ ist also $\exp(\ad_{a})\in\text{Aut}(L)$. Solche
   Automorphismen nennt man \highl[Automorphismus!innerer]{innere
   Automorphismen} von $L$. Die von den inneren Automorphismen erzeugte
-  Untergruppe von $\text{Aut}(L)$ bezeichnet man mit $\text{Int}(L)$. Für
+  Untergruppe von $\text{Aut}(L)$ bezeichnet man mit $\Int(L)$. Für
   $a,b\in L$ und $\phi\in\text{Aut}(L)$ ist
   $\phi\circ\ad_{a}\circ\phi^{-1}(b)=\phi([a, \phi^{-1}(b)])= [\phi(a), b]=
   \ad_{\phi(a)}(b)$, also $\phi\circ\ad_{a}\circ\phi^{-1}=\ad_{\phi(a)}$ und
   daher $\phi\circ\exp(\ad_{a})\circ\phi^{-1}=\exp(\ad_{\phi(a)})$, falls $a$
-  ad-nilpotent. Dies zeigt, dass $\text{Int}(L)$ ein Normalteiler von
-  $\text{Aut}(L)$ ist: $\text{Int}(L)\trianglelefteq\text{Aut}(L)$
+  ad-nilpotent. Dies zeigt, dass $\Int(L)$ ein Normalteiler von
+  $\text{Aut}(L)$ ist: $\Int(L)\trianglelefteq\text{Aut}(L)$.
 \end{bemerk}
+
+%bem 11.5
+\begin{bemerk}
+  Sei $L$ eine Lie-Algebra. Ein Element $x\in L$ heißt \highl{stark
+  ad-nilpotent}, falls Elemente $y\in L, \alpha\in\C^{x}$ existieren mit $x\in
+  L_{\alpha}(\ad_{y})$. Für $\beta\in\C$ ist dann
+  \begin{align*}
+    \ad_{x}(L_{\beta}(\ad_{y})) &= [x, L_{\beta}(\ad_{y})]\subseteq
+       [L_{\alpha}(\ad_{y}), L_{\beta}(\ad_{y})]\subseteq
+       L_{\alpha+\beta}(\ad_{y})
+  \end{align*}
+  Für $n\in\N$ ist also $(\ad_{x})^{n}(L_{\beta}(\ad_{y}))\subseteq
+  L_{n\alpha+\beta}(\ad_{y})$. Wegen $L=\sum_{\beta\in\C} L_{\beta}(\ad_{y})$
+  existiert also ein $n\in\N$ mit $(\ad_{x})^{n}=0$, d.\,h. $x$ ist
+  ad-nilpotent.
+
+  Wir setzen $\mathfrak{N}(L)\colon= \{x\in L\colon x \text{ stark
+  ad-nilpotent}\}$ und bezeichnen mit $\mathfrak{E}(L)$ die von den inneren
+  Automorphismen $\exp(\ad_{x})$ mit $x\in\mathfrak{N}(L)$ erzeugte
+  Untergruppe von $\Int(L)$.
+\end{bemerk}
+
+\begin{satzON}
+  Sei $\phi\colon K\rightarrow L$ ein Epimorphismus von Lie-Algebren. Dann ist
+  $\phi(\mathfrak{N}(K))= \mathfrak{N}(L)$ und zu jedem $\tau\in\FE(L)$
+  existiert ein $\sigma\in\FE(K)$ mit $\tau\circ\phi=\phi\circ\sigma$.
+  \begin{proof}
+    Bekanntlich gilt für $\alpha\in\C^{*}, y\in K\colon
+    \phi(K_{\alpha}(\ad_{y}))= L_{\alpha}(\ad_{\phi(y)})$. Daher ist
+    $\phi(\FN(K))= \FN(L)$.
+
+    Sei $\tau\in\FE(L)$. Sei o.\,B.\,d.\,A. $\tau=\exp(\ad_{b})$ für ein
+    $b\in\FN(L)$. Wählen $a\in K$ mit $b=\phi(a)$. Für $z\in K$ gilt:
+    \begin{align*}
+      (\phi\circ\exp(\ad_{a}))(z) &= \phi(z+[a,z]+
+	 \nicefrac{1}{2}[a,[a,z]]+\dotsb)\\
+      &= \phi(z)+ [b, \phi(z)]+ \nicefrac{1}{2}[b,[b,\phi(z)]]+\dotso =
+	 ((\exp\ad_{b})\circ\phi)(z)
+    \end{align*}
+  \end{proof}
+\end{satzON}
+
+%satz 11.6
+\begin{satz}\label{satz:115}
+  Für jeden Epimorphismus von Lie-Algebren $\phi\colon K\rightarrow L$ gilt:
+  \begin{enumerate}
+   \item Ist $G$ eine Cartanalgebra von $K$, so ist $\phi(G)$ eine
+    Cartanalgebra von $L$.
+   \item Ist $H$ eine Cartanalgebra von $L$ und $G$ eine Cartanalgebra von
+    $\phi^{-1}(H)$, so ist $G$ eine Cartanalgebra von $K$.
+  \end{enumerate}
+  \begin{proof}
+    \begin{enumerate}
+     \item Mit $G$ ist auch $\phi(G)$ nilpotent. Sei $a\in K$ mit $\phi(a)\in
+      N_{L}(\phi(G))$, d.\,h. $a\in N_{K}(G+\ker\phi)= G+\ker\phi$ nach den
+      \autoref{satz:43} und \autoref{satz:45}. Folglich ist $\phi(a)\in\phi(G)$.
+     \item Offenbar ist $G$ nilpotent. Nach dem Teil (i) ist $\phi(G)$ eine
+      Cartanalgebra von $\phi(\phi^{-1}(H))=H$. Also hieraus folgt
+      $\phi(G)=H$. Für $x\in N_{K}(G)$ ist $\phi(x)\in
+      N_{L}(\phi(G))=N_{L}(H)=H$, d.\,h. $x\in\phi^{-1}(H)$. Folglich ist
+      $x\in N_{\phi^{-1}(H)}(G)=G$
+    \end{enumerate}
+  \end{proof}
+\end{satz}
+
+%satz 11.7
+\begin{satz}
+  Seien $H_{1}, H_{2}$ Cartanalgebren einer auflösbaren Lie-Algebra $L$. Dann
+  existiert ein $\sigma\in\FE(L)$ mit $\sigma(H_{1})=H_{2}$.
+  \begin{proof}
+    Beweis erfolgt durch Induktion nach der Dimension von $L$. Im Fall
+    $\dim L\leq1$ ist nichts zu tun. Denn dann ist $H_{1}=H_{2}=L$. Sei also
+    nun $\dim L>1$. Ist $L$ nilpotent, ist $H_{1}=L=H_{2}$. Sei $L$ nicht
+    nilpotent und $A\neq0$ ein möglichst kleines abelsches Ideal in $L$. Dann
+    sind $H_{1}+A/_{A}, H_{2}+A/_{A}$ Cartanalgebren von $L/_{A}$. Nach
+    Induktion existiert ein $\tau\in\FE(L/_{A})$ mit $\tau(H_{1}+A/_{A})=
+    H_{2}+ A/_{A}$. Nach \autoref{satz:115} existiert ein $\sigma\in\FE(L)$
+    mit $\sigma(a)+A=\tau(a+A)$ $a\in L$. Insbesondere ist
+    \begin{align*}
+      \alpha(a)+A &= \tau(a+A)=\tau(0)=0
+    \end{align*}
+    Damit gilt $\sigma(a)\in A$. Somit ist gezeigt, $\sigma(A)=A$. Wegen
+    $\sigma(H_{1}+A)/_{A}=\tau(H_{1}+A/_{A})=H_{2}+A/_{A}$ ist
+    $\sigma(H_{1}+A)= H_{2}+A$. Insbesondere ist $\sigma(H_{1})$ eine
+    Cartanalgebra von $H_{2}+A$. Im Fall $\dim H_{2}+A<L$ existiert ein
+    $\rho\in\FE(H_{2}+A)$ mit $\rho(\sigma(H_{1}))=H_{2}$. Offenbar ist $\rho$
+    Einschränkung eines Elements in $\FE(L)$, d.\,h. in diesem Fall sind wir
+    fertig.
+
+    Sei also $L=H_{2}+A\sigma(H_{1}+A)$. Dann ist auch $L=H_{1}+A$. Nach
+    \ref{satz:45} existiert ein $x\in L$ mit $H_{2}=L_{0}(\ad_{x})$. Offenbar
+    ist $A=A_{0}(\ad_{x})\oplus A_{*}(\ad_{x})$ mit
+    $A_{0}(\ad_{x})\colon=A\cap L_{0}(\ad_{x})= A\cap H_{2}\subseteq H_{2}$
+    und $A_{*}(\ad_{x})=A\cap L_{*}(\ad_{x})$ und $L_{*}(\ad_{x})\colon=
+    \sum_{\alpha\in\C^{*}} L_{\alpha}(\ad_{x})$. Dabei ist
+    $[A,A_{*}(\ad_{x})]= 0$ und $[H_{2}, A_{*}(\ad_{x})]\subseteq
+    A\cap[L_{0}(\ad_{x}), L_{*}(\ad_{x})]\subseteq A\cap
+    L_{*}(\ad_{x})=A_{*}(\ad_{x})$. Folglich ist $A_{*}(\ad_{x})\subseteq L$
+    ein Ideal mit $A_{*}(\ad_{x})\subseteq A$. Im Fall $A_{*}(\ad_{x})=0$ wäre
+    $L=H_{2}+A=H_{2}$ nilpotent. \lightning{}\\
+    Nach Wahl von $A$ ist $A=A_{*}(\ad_{x})\subseteq L_{*}(\ad_{x})$. Wegen
+    $L= H_{2}+A\subseteq L_{0}(\ad_{x})\oplus L_{*}(\ad_{x})=L$ ist also
+    $A=L_{*}(\ad_{x})$. Wegen $L=H_{1}+A$ existieren $y\in H_{1}, z\in A$ mit
+    $x=y+z$. Da $\ad_{x}|L_{*}(\ad_{x})$ bijektiv ist, existiert ein $z'\in
+    L_{*}(\ad_{x})=A$ mit $z=\ad_{x}(z')=[x,z']$. Wegen $[z', [z',a]]=0$ für
+    alle $a\lambda L$ ist $(\ad_{z'})^{2}=0$, also
+    $\exp(\ad_{z'})=\id_{L}+\ad_{z'}$. Insbesondere ist $(\exp\ad_{z'})(x)=
+    x+[z',x]=x-z=y$. Daher ist $H\colon=L_{0})\ad_{y})$ auch eine
+    Cartanalgebra von $L$. Wegen $y\in H_{1}$ ist $H_{1}\subseteq
+    L_{0}(\ad_{y})=H$, also ist $H_{1}=H=(\exp\ad_{y'})(H_{2})$.
+
+    Offenbar ist $z'=z_{1}+\dotsb+ z_{n}$ mit stark ad-nilpotenten Elementen
+    $z_{1},\dotsc, z_{n}$ in $L_{*}(\ad_{x})=A$. Für $i,j=1,\dotsc,n$ ist
+    dabei $[\ad_{z_{i}}, \ad_{z_{j}}]= \ad_{[z_{i}, z_{j}]}=0$. Daher ist
+    $\exp(\ad_{z'})= \exp(\sum_{i=1}^{n} \ad_{z_{i}})= \prod_{i=1}^{n}
+    (\exp\ad_{z_{i}})\in\FE(L)$.
+  \end{proof}
+\end{satz}
+
+\begin{defini}
+  Eine \highl{Borelalgebra} einer Lie-Algebra $L$ ist eine maximale auflösbare
+  Unteralgebra von $L$.
+\end{defini}
+
+\begin{bemerkON}
+  Jede Cartanalgebra von $L$ ist in einer Borelalgebra von $L$ enthalten.
+\end{bemerkON}
+
+\begin{bsp}
+  Sei $L$ halbeinfach mit Cartanzerlegung $L=H\oplus\bigoplus_{\alpha\in\Phi}
+  \C e_{\alpha}$ wie üblich und sei $\Pi\subseteq\Phi$ Basis. Dann ist
+  $B(\Pi)\colon= H\oplus\bigoplus_{\alpha\in\Phi, \text{pos. bzgl} \Pi} \C
+  e_{\alpha}$ eine Borelalgebra von $L$. Denn $N(\Pi)\colon=
+  \bigoplus_{\alpha\in\Phi, \text{pos. bzgl} \Pi} \C e_{\alpha}$ ist ein Ideal
+  in $B(\Pi)$ und $B(\Pi)/_{N(\Pi)}\cong H$ ist abelsch. Ferner ist $N(\Pi)$
+  nilpotent. Denn für positive $\alpha_{1},\dotsc,\alpha_{n}\in\Phi$ ist
+  $[\dotso[e_{\alpha_{1}}, e_{\alpha_{2}}], e_{\alpha_{3}},\dotsc,
+  e_{\alpha_{n}}]\in L_{\alpha_{1}+\dotsb+\alpha_{n}}(H)$ und für $n\gg0$ ist
+  $\alpha_{1}+\dotsb+\alpha_{n}\notin\Phi$, also
+  $L_{\alpha_{1}+\dotsb+\alpha_{n}}(H)=0$. Daher ist $B(\Pi)$ auflösbar (aber
+  nicht nilpotent).
+
+  Sei $K\subseteq L$ eine auflösbare Unteralgebra mit $B(\Pi)\subseteq K$.
+  Dann ist $H$ auch eine Cartanalgebra von $K$. Daher ist
+  $K=H\oplus\bigoplus_{\alpha\in H^{*}} K_{\alpha}(H)$ mit
+  $K_{\alpha}(H)\subseteq L_{\alpha}(H)$ für $\alpha\in H^{*}$. Im Falle
+  $K\nsubseteq B(\Pi)$ existiert eine positive Wurzel $\alpha\in\Phi$ mit
+  $e_{-\alpha}\in K$.
+\end{bsp}
 
 \clearpage
 \appendix
