--- a/fichtner-ewms/skript.tex
+++ b/fichtner-ewms/skript.tex
@@ -4013,6 +4013,68 @@ für alle Stetigkeitspunkte von $F_Q$.
   \frac{\ell^{(n)}(\emptyset)}{\ell^{(n)}(A)}=0$. Weiter gilt
   $\Gl_{A}(\R^{n})= \frac{\ell^{(n)}(A\cap\R^{n})}{\ell^{(n)}(A)}=
   \frac{\ell^{(n)}(A)}{\ell^{(n)}(A)}=1$.
+ \item $\ofp \xrightarrow{\xi_{i}} [\R, \FB, P_{\xi_{i}}],
+  P_{\xi_{i}}=Ex_{\lambda_{i}}, \lambda_{i}>0$. Weiter ist $P_{\xi_{i}}\colon
+  F_{i}(x)= (1-e^{-\lambda_{i}x})\chi_{(0,\infty)}(x)=
+  \begin{cases}
+0 & x \leq0\\
+    1-e^{-\lambda_{i}x} & x>0
+  \end{cases}
+$. Gesucht ist die Verteilungsfunktion der Zufallsgröße $\xi=
+  \min\{\xi_{1},\dotsc,\xi_{n}\}$. Wie ist $F(x)$ definiert? Es gilt,
+  $F(x)=P_{\xi}((-\infty,x))= P(\min\{\xi_{1},\dotsc,\xi_{n}\}<x)= 1-
+  P(\min\{\xi_{1},\dotsc,\xi_{n}\}\geq x)= 1- P(\xi_{1}\geq
+  x,\dotsc,\xi_{n}\geq x)= 1- P(\{\omega\in\Omega\colon \xi_{1}(\omega)\geq
+  x,\dotsc, \xi_{n}(\omega)\geq x\}= 1- P(\bigcap_{i=1}^{n}
+  \{\omega\in\Omega\colon \xi_{i}\geq x\})$ mit $x\in\R$. Dabei sind die
+  Ereignisse unabhängig und man kann das schreiben als $1-\prod_{i=1}^{n}
+  P(\{\omega\in\Omega\colon \xi_{i}\geq x\})= 1-\prod_{i=1}^{n} P(\xi_{i}\geq
+  x)= 1- \prod_{i=1}^{n} (1-F_{i}(x))$. Die weitere Betrachtungen erfordern
+  eine Fallunterscheidung. Im Fall $x\leq0$ ist $F(x)= 0$. Für $x>0$ gilt
+  $F(x)= 1- \prod_{i=1}^{n} (1-(1-e^{-\lambda_{i}x}))= 1-\prod_{i=1}^{n}
+  e^{-\lambda_{i}x}= 1-e^{-\lambda x}$ für $\lambda=\sum_{i=1}^{n}
+  \lambda_{i}$. Also folgt, $F(x)= (1-e^{-\lambda x})\chi_{(0,\infty)}(x)$.
+  Somit ist $P_{\xi}= \Ex_{\lambda}$.$)$
+ \item Es sind $n\geq1$ unabhängige Zufallsgrößen $\xi_{1},\dotsc,\xi_{n}$
+  über einem Wahrscheinlichkeitsraum $\ofp$ mit $P_{\xi_{i}}=\Ex_{\lambda},
+  \lambda>0$ gegeben. Weiterhin ist $\eta=\xi_{1}+\dotsb+\xi_{n}$. Zeigen Sie:
+  $P_{\eta}$ ist absolut stetig bezüglich des \textsc{Lebesgue}-Maßes $\ell$
+  auf $[\R, \FB]$ mit der Dichte
+  \begin{gather*}
+    f_{n}(x)=
+       \begin{cases}
+	 0 & x\leq0\\
+	 \frac{1}{(n-1)!} \lambda^{n} e^{-\lambda x} x^{n-1} & x\geq0
+       \end{cases}
+  \end{gather*}
+  Das Wahrscheinlichkeitsmaß $P_{\eta}$ heißt \textsc{Erlang}-Verteilung mit
+  $n$ Freiheitsgraden und dem Parameter $\lambda>0$. Speziell ist $f_{1}$ die
+  Dichte der Exponentialverteilung.\\ Wir wissen:
+  $\eta=\xi_{1}+\dotsb+\xi_{n}, P_{\eta}= \ell f_{n}$ und müssen eine
+  Induktion über $n$ durchführen: Sei $n=2, \eta=\xi_{1}+\xi_{2}$. Dabei sind
+  die $\xi_{1}, \xi_{2}$ unabhägig und gleich verteilt. Nach der Vorlesung ist
+  $P_{\eta}= P_{\xi_{1}}* P_{\xi_{2}}$. Wir wissen weiter, $f_{\xi_{1}}=
+  f_{\xi_{2}}=f_{1}$. Die Dichte ist $(f_{\xi_{1}}* f_{\xi_{2}})(x)=
+  \int_{0}^{y} \underbrace{f_{\xi_{1}}(y-x)}_{>0\text{ für } y-x>0}
+  \underbrace{f_{\xi_{2}}(x)}_{>0} \ell(dx)= \lambda^{2}\int_{0}^{y}
+  e^{-\lambda(y-x)} e^{-\lambda x}\,dx= \lambda^{2} e^{-\lambda y}
+  \int_{0}^{y}\,dx= \lambda^{2} e^{-\lambda y}y$. Denn $e^{-\lambda
+  x}e^{-\lambda(-x)}=1$. Also folgt, dass $f_{\xi_{1}}*f_{\xi_{2}}=f_{2}$. Es
+  gelte nun die Behauptung für $n-1$. Nun ist $P_{\eta_{n}}= *_{i=1}^{n}
+  P_{\xi_{i}}= P_{\eta_{n-1}}* P_{\xi_{n}}$.  Es gilt $(f_{n-1}*f_{n})(y)=
+  \int_{0}^{y} f_{n-1}(y-x) f_{n}(x)\ell(dx)= \frac{1}{(n-2)!}\lambda^{n-1+1}
+  \int_{(0,y)} e^{-\lambda(y-x)} (y-x)^{n-2} e^{-\lambda x}\,\ell(dx)=
+  \frac{1}{(n-2)!} \lambda^{n} e^{-\lambda y} \int_{0}^{y} (y-x)^{n-2}\,dx$
+  Nun substituieren wir $t=y-x, dt=-dx$ und schreiben das Integral
+  $\frac{1}{(n-2)!} \lambda^{n} e^{-\lambda y} (-\int_{y}^{0} t^{n-2}\,dt)=
+  \frac{1}{(n-2)!} \lambda^{n} e^{-\lambda y} \int_{0}^{y} t^{n-2}\,dt=
+  \frac{1}{(n-2)!(n-1)} \lambda^{n} e^{-\lambda y} t^{n-1}|^{y}_{0}=
+  \frac{1}{(n-1)!} \lambda^{n} e^{-\lambda y}y^{n-1}$. Somit folgt die
+  Behauptung.
+ \item Sei $\ofp$ ein Wahrscheinlichkeitsraum. Berechnen Sie das erste Moment,
+  das zweite Moment und die Varianz folgender Zufallsgrößen: $\xi_{2}\colon
+  \Omega\rightarrow\N_{0}$ mit $P_{\xi_{2}}= G_{q}, 0<q<1$.\\
+  $m_{2}= (1-q) \sum_{k=1}^{\infty} k^{2} q^{k-1}= 2m_{1}\frac{1}{1-q}$
 \end{enumerate}
 
 \printindex
