--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -39,6 +39,7 @@
 
 \usepackage[intlimits,leqno]{amsmath}
 \usepackage{amssymb}     % wird für \R, \C,... gebraucht
+\usepackage{mathtools}
 \usepackage[thmmarks,hyperref,amsmath]{ntheorem} % für die Theorem-Umgebungen
                                          % (satz, defini, bemerk)
 \usepackage{xspace}      % wird weiter unten gebraucht
@@ -224,10 +225,8 @@
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
 % rechten Striche vergessen und es wird etwas übersichtlicher. (Vorschlag
 % ist aus amsldoc) \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
-\newcommand*{\abs}[2][]{#1\lvert#2%
-  \ifthenelse{\equal{\protect #1}{\protect \left}}{\right}{#1}\rvert}
-\newcommand*{\norm}[2][]{#1\lVert#2%
-  \ifthenelse{\equal{\protect #1}{\protect \left}}{\right}{#1}\rVert}
+\DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
+\DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
 \newcommand*{\sprod}[3][]{#1\langle #2,#3%
   \ifthenelse{\equal{\protect #1}{\protect \left}}{\right}{#1}\rangle}
 
@@ -1498,7 +1497,7 @@ schreiben:
       &= \int_{a}^{b} \vec{v}(\phi(t))\cdot
          \underbrace{\begin{bmatrix}\dot{\phi_{2}}(t)\\-\dot{\phi_{1}}(t)
            \end{bmatrix}}
-         _{\makebox[0pt]{$=\vec{n}(\phi(t))\cdot\norm{\dot{\phi}(t)}$}}
+         _{\mathclap{=\vec{n}(\phi(t))\cdot\norm{\dot{\phi}(t)}}}
          \,dt = \int_{\partial B} \vec{v} \cdot \vec{n}\,ds
     \end{align*}
   \end{proof}
