• mundhenk-logik/skript.latex   · Noch eine Idee für die Änderung am Dokument notiert.
  · Meine Gedanken zur Vorbemerkung (und zum Gesamtdokument) an die
    Vorbemerkung angehangen. Vielleicht kann das mal noch eingearbeitet oder
    berücksichtigt werden. Vorher erstmal prüfen, ob es korrekt ist und zum
    Dokument passt!

  · Den einleitenden Absatz zum Kapitel der Zahlentheorie ersetzt.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1026 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -1,6 +1,10 @@
 % ToDo:
 %  * die Umdefinition von \emph sollte rückgängig gemacht werden und
 %    stattdessen sollte der Befehl \highl oder \Begriff verwendet werden
+%  * der Befehl \highl könnte um einen Parameter type=XY erweitert werden, der
+%    angibt, um welche Art von auftreten es sich handelt, danach könnte man
+%    dann den Index sortieren: type=definition wird vor type=verwendung
+%    aufgeführt
 %  * alle Stellen, die eigentlich \emph seien sollen, wo aber jetzt \textit
 %    verwendet wurde, sollen \emph werden
 %  * \xvdash sollte in etwas umbenannt werden, was seine Bedeutung
@@ -424,8 +428,8 @@ Der Begriff des Beweises ist hier ein rein
 mechanischer -- syntaktischer -- Begriff,
 der auf der formalen Definition der Logik basiert.
 Dort werden Axiome aufgestellt, die
-genau die grundlegenden Wahrheiten ausdrücken sollen.
-Aus ihnen lassen sich mit festgelegten Schlussregeln
+genau die grundlegenden Wahrheiten ausdrücken sollen und
+aus ihnen lassen sich mit festgelegten Schlussregeln
 logische Schlüsse ziehen.
 Der Begriff der wahren Aussage ist dagegen
 ein inhaltlicher -- semantischer -- Begriff,
@@ -492,6 +496,47 @@ kann ich nur empfehlen: Lest das Buch von Mendelson!!
 \begin{flushright}
   Martin Mundhenk
 \end{flushright}
+
+Anmerkung von Jörg Sommer, die in das Vorwort eingearbeitet werden sollen:
+
+Ich finde das bisherige Vorwort stellt die Kapitel zu abgegrenzt gegeneinander
+dar. (Ich finde, das Bild zeigt sich auch in der Vorlesung selbst.) Ich
+verstehe die Aussagenlogik als eine einfache "`kleine"' Logik für den
+Einstieg. Diese wird dann um das Mächtige Konzept der Quantoren zur
+Prädikatenlogik erweitert. (Diese Erweiterung sollte auch im zweiten Kapitel
+verdeutlicht werden. Meiner Meinung nach findet sich das Konzept der
+Interpretation bereits in der Aussagenlogik, nur das es dort nicht so zu Tage
+tritt, weil mal immer nur von wahr und falsch spricht -- sowohl in der Logik
+selbst als auch in der Interpretation.) Mit Hilfe der Prädikatenlogik kann man
+dann die formale Zahlentheorie aufbauen.
+
+Wärend die Aussagen- und Prädikatenlogik nicht ausdrucksstark genug um über
+sich selbst Aussagen zu machen, kann man in der formalen Zahlentheorie
+Aussagen über die Theorie selbst machen.
+
+Noch einige Gedanken:
+\begin{itemize}
+ \item in Aussagen- und Prädikatenlogik ist die Vollständigkeit noch gegeben, in
+  der Zahlentheorie aber nicht mehr
+
+ \item d.\,h. ein System, das mächtig genug ist, um über sich selbst Aussagen zu
+  machen -- zur Selbstreflektion fähig ist -- kann sich selbst nicht
+  vollständig erschließen
+
+ \item z.\,B. System = Computer: es kann kein Programm geben, dass die
+  Korrektheit für \textit{alle} Programme, die ihm vorgelegt werden, prüfen
+  kann -- Halteproblem; es kann trotzem ein Programm geben, dass für einige
+  Programme die Korrektheit prüft, aber eben nicht für \textit{alle}
+
+ \item Dilemma (philosophisch): entweder ist ein System nicht mächtig genug, um
+  über sich selbst Aussagen zu machen, oder es ist nicht möglich, alle
+  Aussagen des Systems zu prüfen; ein System kann sich selbst nie
+  vollständig ergründen
+
+ \item Superphilosophische Frage zum Abschluss als Aufhänger: Was bedeutet dies
+  für das System "`Mensch"', der durch den Prozess des Denkens (Aussagen
+  machen/prüfen) auch in der Lage ist, über sich selbst zu reflektieren?
+\end{itemize}
 
 \chapter{Aussagenlogik}
 
@@ -4871,10 +4916,14 @@ Menge von Axiomen, aus der alle Wahrheiten abgeleitet werden können.
 \chapter{Formale Zahlentheorie}
 \label{chapter-zahlentheorie}
 
-Wir begeben uns nun auf die Zielgerade mit dem Blick auf Gödels
-Unvollständigkeitssatz. Im \href{cha:prlogik}{\ref*{cha:prlogik}.~Kapitel} haben
-wir uns die Hilfsmittel für die Formalisierung der Zahlentheorie geschaffen.
-\todo{weiterschreiben, was kommt denn nun alles?}
+1910 begannen Betrand Russel und Alfred North Withehead in einem monomentalen
+Werk -- der \emph{Principia Mathematica} -- \textit{alle} Beweise der
+Zahlentheorie mit Hilfe eines formalen Systems herzuleiten, um die
+Widerspruchsfreiheit des Axiomensystem der (reellen) Arithmetik zu zeigen --
+eines der Probleme, die David Hilbert 1900 formuliert hat. 1931 zeigte jedoch
+Kurt Gödel mit seinem Unvollständigkeitssatz, dass dies nicht möglich ist. Es
+gibt Aussagen, in der Zahlentheorie, die man weder beweisen noch widerlegen
+kann.
 
 Die \emph{Zahlentheorie} befasst sich mit Eigenschaften natürlicher Zahlen.
 Die wohl am Häufigsten gebrauchte Beschreibung der natürlichen Zahlen sind die
